# SimpleGeometryRender

./: .gitignore  CMakeLists.txt  compile_commands.json  conanfile.py  imgui.ini
glsl/: FragmentShader.glsl  VertexShader.glsl
include/: Objects.h  RenderObject2D.h  UIHandler.h  Utilities.h
src/: CMakeLists.txt  Objects.cpp  RenderObject2D.cpp  UIHandler.cpp  Utilities.cpp  main.cpp
